--- a/keynote.html
+++ b/keynote.html
@@ -8,7 +8,7 @@ permalink: /keynote/
     The Keynote Address will take place on Monday, February 6th, 2017 at 7:00 pm in Laidlaw Hall at Upper Canada College. Please show up at 6:30 to register and get settled before the Keynote Address begins.
   </div>
   <div class="card">
-    <div class="card-block">
+    <div class="card-body">
       <div class="row">
         <div class="col-lg-4">
             <img class="img-fluid rounded-circle d-block mx-auto" src="{{site.baseurl}}/img/de-grey.jpg" alt="Picture of Dr. Aubrey De Grey"/>
@@ -29,7 +29,7 @@ permalink: /keynote/
   <div class="card-deck mt-2">
     <div class="card">
       <img class="card-img-top img-fluid" src="{{site.baseurl}}/img/balyozian.png" alt="Picture of Nanor Balyozian">
-      <div class="card-block">
+      <div class="card-body">
         <h3 class="card-title">WAC 2016: Nanor Balyozian</h3>
         <p class="card-text">
           Nanor Balyozian fled the Syrian civil war in 2013. Her family fled to Lebanon, where they spent a year before arriving in Toronto on December 22nd 2014. She holds a BA in English Literature from the University of Arts and Humanities in Aleppo, Syria. In her speech, Balyozian described the challenges she faced on her journey from Aleppo to Toronto and addressed the Canadian government’s policies during the refugee crisis from her personal perspective. What has the government done well? What has the government done poorly? Finally, she will also gave her thoughts on the refugee crisis as a global issue.
@@ -38,7 +38,7 @@ permalink: /keynote/
     </div>
     <div class="card">
       <img class="card-img-top img-fluid" src="{{site.baseurl}}/img/snowden.png" alt="Picture of Edward Snowden">
-      <div class="card-block">
+      <div class="card-body">
         <h3 class="card-title">WAC 2015: Edward Snowden</h3>
         <p class="card-text">
           Two years ago, Edward Snowden gave the WAC 2015 Lionel Gelber Keynote Address. In June 2013, Snowden leaked highly classified information about the scale and scope of NSA and CIA counter-terrorism and counter-intelligence operations around the globe. Since then, he has become a household name and is among the most influential privacy activists in the world. At the Keynote Address, Snowden explained his views on global privacy issues, government involvement in citizens' lives, and the dangers of the digital age.
@@ -47,7 +47,7 @@ permalink: /keynote/
     </div>
     <div class="card">
       <img class="card-img-top img-fluid" src="{{site.baseurl}}/img/avatar.png" alt="Decorative Image">
-      <div class="card-block">
+      <div class="card-body">
         <h3 class="card-title">Previous WAC Speakers</h3>
         <p class="card-text">
     			WAC has featured many current, popular, and influential speakers in the past. Here's a quick summary of some big names at WAC:
