--- a/panels.html
+++ b/panels.html
@@ -4,7 +4,7 @@ title : "Addresses"
 permalink : /addresses/
 ---
 <div class="container">
-	<div class="card card-block">
+	<div class="card card-body">
 		<h1 class="text-center">Opening Address: {{ site.data.panel.opening.title}}</h1>
 		<p>{{ site.data.panel.opening.blurb}}</p>
 		{% for item in site.data.panel.opening.speakers %}
