--- a/schedule.html
+++ b/schedule.html
@@ -4,7 +4,7 @@ title: WAC Schedule
 permalink: /schedule/
 ---
 <div class="container">
-  <div class="card card-block">
+  <div class="card card-body">
     <h1 class="text-center">The WAC Schedule</h1>
     <h2 class="text-center">Find a PDF copy <a href="{{site.baseurl}}/files/schedule.pdf">here</a></h2>
     <p class="text-center">
