--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="container">
   <center>
-    <div class="card card-block">
+    <div class="card card-body">
       <h2>Error 404: URL Not Found</h2>
       <h1>The page you're trying to visit is out of this world!</h1>
       <h3><a href="{{ site.baseurl }}/index.html">Maybe going back home will help you find your way.</a></h3>
