--- a/staff.html
+++ b/staff.html
@@ -4,11 +4,11 @@ title: WAC Staff
 permalink: /staff/
 ---
 <div class="container">
-  <div class="card card-block">
+  <div class="card card-body">
     <div class="card-deck">
     {% for item in site.data.staff %}
         <div class="card text-center">
-          <div class="card-block">
+          <div class="card-body">
             <img class="img-fluid rounded-circle pb-1" src="{{site.baseurl}}/img/staff/{{item[1].image}}" alt="picture of {{item[1].name}}"/>
             <h4 class="card-title">{{ item[1].name }}</h4>
             <h5>{{item[1].primary}}</h5>
