--- a/keynote.html
+++ b/keynote.html
@@ -5,34 +5,39 @@ permalink: /keynote/
 ---
 <div class="container">
   <div class="alert alert-info" role="alert">
-    The Keynote Address will take place on Monday, February 6th, 2017 at 7:00 pm in Laidlaw Hall at Upper Canada College. Please show up at 6:30 to register and get settled before the Keynote Address begins.
+    The Keynote Address will take place on Monday, February 5th, 2018 at 7:00 pm in Laidlaw Hall at Upper Canada College. Please show up at 6:30 to register and get settled before the Keynote Address begins.
   </div>
   <div class="card">
     <div class="card-body">
+      <div class="text-center">
+        <h1>WAC Keynote Speaker: Coming Soon</h1>
+        <p>
+          Our Lionel Gelber Keynote Speaker this year is a special surprise; we'll release more information as the conference nears. Keep your eyes on our social media accounts!
+        </p>
+    </div>
+      <!--
       <div class="row">
         <div class="col-lg-4">
-            <img class="img-fluid rounded-circle d-block mx-auto" src="{{site.baseurl}}/img/de-grey.jpg" alt="Picture of Dr. Aubrey De Grey"/>
+            <img class="img-fluid rounded-circle d-block mx-auto" src="{{site.baseurl}}/img/avatar.png" alt="WAC Speaker coming soon."/>
           </div>
           <div class="col-lg-8">
-            <h1>Dr. Aubrey De Grey</h1>
-            <h2>A Prognosis for a Post-Aging Planet</h2>
+            <h1>WAC Keynote Speaker</h1>
+            <h2>Coming Soon</h2>
             <p>
-            Dr. Aubrey de Grey is a biomedical gerontologist based in Cambridge, UK and Mountain View, California, USA, and is the Chief Science Officer of SENS Research Foundation, a California-based charity dedicated to combating the aging process. He is also Editor-in-Chief of Rejuvenation Research, the world’s highest-impact peer-reviewed journal focused on intervention in aging. He received his BA and Ph.D. from the University of Cambridge in 1985 and 2000 respectively. His original field was computer science, and he did research in the private sector for six years in the area of software verification before switching to biogerontology in the mid-1990s. Nowadays, Dr. de Grey is arguably the world’s foremost advocate for the pursuit of radical life extension.
-          </p>
-          <p>
-            In this address, Dr. de Grey will address the ethical considerations and future political impacts of radical life extension, as well as its global feasibility.
-          </p>
+              Our WAC Keynote Speaker this year is a special surprise; we'll release more information as the conference nears. Keep your eyes on our social media accounts!
+            </p>
         </div>
       </div>
+      -->
     </div>
   </div>
   <div class="card-deck mt-2">
     <div class="card">
-      <img class="card-img-top img-fluid" src="{{site.baseurl}}/img/balyozian.png" alt="Picture of Nanor Balyozian">
+      <img class="card-img-top img-fluid" src="{{site.baseurl}}/img/de-grey.jpg" alt="Picture of Dr. Aubrey de Grey">
       <div class="card-body">
-        <h3 class="card-title">WAC 2016: Nanor Balyozian</h3>
+        <h3 class="card-title">WAC 2017: Dr. Aubrey de Grey</h3>
         <p class="card-text">
-          Nanor Balyozian fled the Syrian civil war in 2013. Her family fled to Lebanon, where they spent a year before arriving in Toronto on December 22nd 2014. She holds a BA in English Literature from the University of Arts and Humanities in Aleppo, Syria. In her speech, Balyozian described the challenges she faced on her journey from Aleppo to Toronto and addressed the Canadian government’s policies during the refugee crisis from her personal perspective. What has the government done well? What has the government done poorly? Finally, she will also gave her thoughts on the refugee crisis as a global issue.
+          Dr. Aubrey de Grey is a biomedical gerontologist based in Cambridge, UK and Mountain View, California, USA, and is the Chief Science Officer of SENS Research Foundation. He is also Editor-in-Chief of Rejuvenation Research, the world’s highest-impact peer-reviewed journal focused on intervention in aging. He received his BA and Ph.D. from the University of Cambridge in 1985 and 2000 respectively. His original field was computer science, and he did research in the private sector for six years in the area of software verification before switching to biogerontology in the mid-1990s. Nowadays, Dr. de Grey is arguably the world’s foremost advocate for the pursuit of radical life extension.
         </p>
       </div>
     </div>
@@ -52,6 +57,8 @@ permalink: /keynote/
         <p class="card-text">
     			WAC has featured many current, popular, and influential speakers in the past. Here's a quick summary of some big names at WAC:
     			</br>
+          <b>Nanor Balyozian</b> - Syrian political advocate
+          </br>
     			<b>Dr. Samantha Nutt</b> - Founder of War Child North America
     			</br>
     			<b>Stephen Lewis</b> - former United Nations ambassador
