--- a/schedule.html
+++ b/schedule.html
@@ -2,6 +2,7 @@
 layout: default
 title: WAC Schedule
 permalink: /schedule/
+published: false
 ---
 <div class="container">
   <div class="card card-body">
