--- a/staff.html
+++ b/staff.html
@@ -5,19 +5,23 @@ permalink: /staff/
 ---
 <div class="container">
   <div class="card card-body">
-    <div class="card-deck">
-    {% for item in site.data.staff %}
-        <div class="card text-center">
-          <div class="card-body">
-            <img class="img-fluid rounded-circle pb-1" src="{{site.baseurl}}/img/staff/{{item[1].image}}" alt="picture of {{item[1].name}}"/>
-            <h4 class="card-title">{{ item[1].name }}</h4>
-            <h5>{{item[1].primary}}</h5>
-            {% if item[1].secondary%}<h6>{{item[1].secondary}}</h6>{% endif %}
-            {% if item[1].github%}<a class="black-icon" href="https://github.com/{{item[1].github}}"><span class="fa fa-2x fa-github"></span></a>{% endif %}
+    <div class="row">
+      {% for item in site.data.staff %}
+        <div class="col">
+          <div class="row mt-4 mb-4">
+            <div class="col-sm-4">
+              <img class="img-fluid rounded-circle" src="{{site.baseurl}}/img/staff/{{item[1].image}}" alt="picture of {{item[1].name}}"/>
+            </div>
+            <div class="col-sm-8">
+              <h4 class="card-title">{{ item[1].name }}</h4>
+              <h5>{{item[1].primary}}</h5>
+              {% if item[1].secondary%}<h6>{{item[1].secondary}}</h6>{% endif %}
+              {% if item[1].github%}<a class="black-icon" href="https://github.com/{{item[1].github}}"><span class="fa fa-2x fa-github"></span></a>{% endif %}
+            </div>
           </div>
         </div>
-        {% cycle 'group1': '', '', '', '</div><div class="card-deck mt-2">' %}
-    {% endfor %}
+        {% cycle 'group1': '', '</div><div class="row">' %}
+      {% endfor %}
     </div>
   </div>
 </div>
