minor programs changes

--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 ---
 layout: default
 ---
-<div class="container">
-  <div class="alert alert-info" role="alert">
-    This is is an Alpha version of WAC 2018 - use at your own risk!
-  </div>
-</div>
 <div class="index-welcome">
   <div class="container">
     <div class="text-center text-md-left">
       <h2>Welcome to the 2018</h2>
       <h1>World Affairs Conference</h1>
+      <h3 class="display-5">February 5th and 6th</h3>
     </div>
     <div class="text-center">
       This Year's Theme:
