--- a/panels.html
+++ b/panels.html
@@ -6,13 +6,13 @@ permalink : /addresses/
 <div class="container">
 	<div class="card card-body mb-5">
 		<h1 class="text-center">Opening Address: The Rise of Globalization</h1>
-		<p>
+		<p class="text-center">
 			More information is coming soon.
 		</p>
-	</div>
-	<div class="card card-body">
+		<div class="pb-5">
+		</div>
 		<h1 class="text-center">Closing Address</h1>
-		<p>
+		<p class="text-center">
 			More information is coming soon.
 		</p>
 		{% comment %}
