more homepage stuff

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
       </div>
       <div class="col-sm-8">
         <h4>What's WAC?</h4>
-        <p>The World Affairs Conference (WAC) is Canada's oldest annual student-run current affairs conference. Annually held at Upper Canada College in Toronto, Canada, the World Affairs Conference connects over 1000 students, with a common interest in current affairs, from across North America. A dedicated team of about 100 high school students from Upper Canada College, in coordination with Branksome Hall, voluntarily contribute their time for many months leading up to the day of WAC to ensure the success and positive experience for each delegate that attends the conference. We look forward to welcoming you to the 2018 conference.</p>
+        <p>The World Affairs Conference (WAC) is Canada's oldest annual student-run current affairs conference. Annually held at Upper Canada College in Toronto, Canada, the World Affairs Conference connects over 1000 students, with a common interest in current affairs, from across North America. A dedicated team of about 100 high school students from Upper Canada College, in coordination with Branksome Hall, voluntarily contribute their tdiv for many months leading up to the day of WAC to ensure the success and positive experience for each delegate that attends the conference. We look forward to welcoming you to the 2018 conference.</p>
         <a class="card-link" href="{{site.baseurl}}/keynote/">Keynote</a>
         <a class="card-link" href="{{site.baseurl}}/addresses/">Addresses</a>
         <a class="card-link" href="{{site.baseurl}}/plenaries/">Plenaries</a>
@@ -35,27 +35,46 @@ layout: default
       </div>
     </div>
   </div>
-</div>
-<!--
-<div class="container py-2">
-  <div class="card card-body">
+  <div class="card card-body mt-3">
     <div class="row">
-      <div class="col-md-4">
-        <iframe class="img-fluid d-block" src="https://www.youtube.com/embed/mal4ijVNtOw" frameborder="0" allowfullscreen></iframe>
+      <div class="col-sm-4 order-sm-2 order-1">
+        <img class="img-fluid" src="{{site.baseurl}}/img/avatar.png" alt="Mystery speaker logo!"/>
       </div>
-      <div class="col-md-8">
-        <h2>"Our Time"</h2>
+      <div class="col-sm-8 order-sm-1 order-2 text-sm-right">
+        <h4>Speakers Coming Soon!</h4>
         <p>
-          "Our Time" demonstrates the urgency of the problems existing in the status quo, and why the youth, as a generation have to rise to the challenge to ensure the security of the future.
+          We're releasing more information on speakers soon, including an innovative and exciting keynote speaker. In the past, we've had a diverse range of influential speakers, including Edward Snowden, Dr. Aubrey de Grey, Dr. Samantha Nutt, Marc Garneau, Ralph Nader, and Lord David Owen.
         </p>
         <p>
-          WAC 2017 is coming up soon! The Lionel Gelber Keynote Address is open to the Toronto public on February 6th, as part of the World Affairs Conference. This year, in "A Prognosis for a Post-Aging Planet", Aubrey De Grey discusses the implications of radical life extension. Learn more on <a class="card-link" href="{{site.baseurl}}/keynote/">Keynote</a> page.
+          Stay tuned for more information!
         </p>
       </div>
     </div>
   </div>
 </div>
--->
+<div class="container mt-3">
+  <div class="card card-body">
+    <h2 class="text-center">Highlights From WAC</h2>
+    <h3>Our Time</h3>
+    <p>
+      "Our Time" was a short film made for WAC 2017, emphasizing the importance of the topics of WAC 2017 and what roles students could play in solving global problems.
+    </p>
+    <div class="embed-container">
+      <iframe src="https://www.youtube.com/embed/mal4ijVNtOw?rel=0" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <div class="row pt-5">
+      <div class="col-sm-3">
+        <img class="img-fluid" src="{{site.baseurl}}/img/snowden.png" alt="Edward Snowden"/>
+      </div>
+      <div class="col-sm-9">
+        <h3>Edward Snowden</h3>
+        <p>
+          Two years ago, Edward Snowden gave the WAC 2015 Lionel Gelber Keynote Address. In June 2013, Snowden leaked highly classified information about the scale and scope of NSA and CIA counter-terrorism and counter-intelligence operations around the globe. Since then, he has become a household name and is among the most influential privacy activists in the world. At the Keynote Address, Snowden explained his views on global privacy issues, government involvement in citizens' lives, and the dangers of the digital age.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
 <script type="text/javascript">
   var wacdate = "2/6/2018"; //Countdown date in MM/DD/YYYY format (no 0's required)
   function getTimeRemaining(endtime){
