oh wow, is that more content? a keynote speaker?

--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@ layout: default
 <div class="container">
   <div class="card card-body mt-3">
     <div class="row">
-      <div class="col-sm-4">
+      <div class="col-sm-3">
         <img class="img-fluid" src="{{site.baseurl}}/img/wac_logo.svg" alt="WAC Logo"/>
       </div>
-      <div class="col-sm-8">
+      <div class="col-sm-9">
         <h4>What's WAC?</h4>
-        <p>The World Affairs Conference (WAC) is Canada's oldest annual student-run current affairs conference. Annually held at Upper Canada College in Toronto, Canada, the World Affairs Conference connects over 1000 students, with a common interest in current affairs, from across North America. A dedicated team of about 100 high school students from Upper Canada College, in coordination with Branksome Hall, voluntarily contribute their tdiv for many months leading up to the day of WAC to ensure the success and positive experience for each delegate that attends the conference. We look forward to welcoming you to the 2018 conference.</p>
+        <p>
+          The World Affairs Conference (WAC) is Canada's oldest annual student-run current affairs conference. Annually held at Upper Canada College in Toronto, Canada, the World Affairs Conference connects over 1000 students, with a common interest in current affairs, from across North America.
+        </p>
+        <p>
+          This year, WAC 2018's theme is <b>Paradigm Shifts</b>: how have the axioms of society changed, and how will they change in the future? Some of our programs will include discussions on new innovative technologies, the ever-changing political landscape, and shifts in social policy and movements.
+        </p>
         <a class="card-link" href="{{site.baseurl}}/keynote/">Keynote</a>
         <a class="card-link" href="{{site.baseurl}}/addresses/">Addresses</a>
         <a class="card-link" href="{{site.baseurl}}/plenaries/">Plenaries</a>
@@ -37,16 +42,17 @@ layout: default
   </div>
   <div class="card card-body mt-3">
     <div class="row">
-      <div class="col-sm-4 order-sm-2 order-1">
-        <img class="img-fluid" src="{{site.baseurl}}/img/avatar.png" alt="Mystery speaker logo!"/>
+      <div class="col-sm-6">
+        <img class="img-fluid rounded" src="{{site.baseurl}}/img/speakers/hinton.png" alt="Keynote Speaker Geoffrey Hinton"/>
       </div>
-      <div class="col-sm-8 order-sm-1 order-2 text-sm-right">
-        <h4>Speakers Coming Soon!</h4>
+      <div class="col-sm-6">
+        <h3>Featured Speaker</h3>
+        <h4>Geoffrey Hinton, Keynote Address</h4>
         <p>
-          We're releasing more information on speakers soon, including an innovative and exciting keynote speaker. In the past, we've had a diverse range of influential speakers, including Edward Snowden, Dr. Aubrey de Grey, Dr. Samantha Nutt, Marc Garneau, Ralph Nader, and Lord David Owen.
+          The increasing possibilities of artificial intelligence will have consequential impacts on society. Ranging from an upheaval of the job market to an increasingly computer dependent world, artificial intelligence is one of today’s most profound paradigm shifts. Geoffrey Hinton, nicknamed the “Godfather of Machine Learning”, divides his time between working for Google and the University of Toronto. His expertise will address how AI will change the society we live in now.
         </p>
         <p>
-          Stay tuned for more information!
+          We're releasing more information on other speakers soon - stay tuned!
         </p>
       </div>
     </div>
@@ -54,7 +60,7 @@ layout: default
 </div>
 <div class="container mt-3">
   <div class="card card-body">
-    <h2 class="text-center">Highlights From WAC</h2>
+    <h2 class="text-center">Previously From WAC</h2>
     <h3>Our Time</h3>
     <p>
       "Our Time" was a short film made for WAC 2017, emphasizing the importance of the topics of WAC 2017 and what roles students could play in solving global problems.
