--- a/keynote.html
+++ b/keynote.html
@@ -6,14 +6,18 @@ permalink: /keynote/
 <div class="container">
   <div class="card">
     <div class="card-body">
-      <div class="text-center">
-        <h1>WAC Keynote Speaker</h1>
-        <h2>Coming Soon</h2>
-        <img class="img-fluid rounded-circle d-block mx-auto" src="{{site.baseurl}}/img/avatar.png" alt="WAC Speaker coming soon."/>
-        <p>
-          Our WAC Keynote Speaker this year is a special surprise; we'll release more information as the conference nears. Keep your eyes on our social media accounts!
-        </p>
-      </div>
+      <h1 class="text-center">Professor Geoffrey Hinton</h1>
+      <h2 class="text-center">Lionel Gelber Keynote Speaker</h2>
+      <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="{{site.baseurl}}/img/speakers/hinton.png" alt="Prof. Geoffrey Hinton"/>
+      <p>
+        Geoffrey Hinton received his PhD in Artificial Intelligence from Edinburgh in 1978.  After five years as a faculty member at Carnegie-Mellon he became a fellow of the Canadian Institute for Advanced Research and moved to the Department of Computer Science at the University of Toronto where he is now an emeritus distinguished professor. He is also a distinguished researcher at Google.
+      </p>
+      <p>
+        Geoffrey Hinton was one of the researchers who introduced the backpropagation algorithm and the first to use backpropagation for learning word embeddings. His other contributions to neural network research include Boltzmann machines, distributed representations, time-delay neural nets, mixtures of experts, variational learning and deep learning.  His research group in Toronto made major breakthroughs in deep learning that revolutionized speech recognition and object classification.
+      </p>
+      <p>
+        Geoffrey Hinton is a fellow of the UK Royal Society and a foreign member of the US National Academy of Engineering and the American Academy of Arts and Sciences. His awards include the David E. Rumelhart prize, the IJCAI award for research excellence, the Killam prize for Engineering, the IEEE James Clerk Maxwell Gold medal, and the NSERC Herzberg Gold Medal which is Canada's top award in Science and Engineering.
+      </p>
     </div>
   </div>
   <div class="card-deck mt-2">
