--- a/addresses.html
+++ b/addresses.html
@@ -5,14 +5,18 @@ permalink : /addresses/
 ---
 <div class="container">
 	<div class="card card-body mb-5">
-		<h1 class="text-center">Opening Address: The Rise of Globalization</h1>
-		<p class="text-center">
+		<h1>Opening Address: The Rise of Protectionism</h1>
+		<h4>Just how global should our society be?</h4>
+		<p class="mt-2">
+			In the past few years, the once all-encompassing globalism that came with the rise of Americanism and the U.N. has faded; protectionism has gained traction in the United States, Britain, and Poland. Is globalism still effective in our society today? Is protectionism a valid political ideology?
+		</p>
+		<p>
 			More information is coming soon.
 		</p>
 		<div class="pb-5">
 		</div>
-		<h1 class="text-center">Closing Address</h1>
-		<p class="text-center">
+		<h1>Closing Address</h1>
+		<p class="mt-2">
 			More information is coming soon.
 		</p>
 		{% comment %}
