adds micah white

--- a/addresses.html
+++ b/addresses.html
@@ -5,9 +5,14 @@ permalink : /addresses/
 ---
 <div class="container">
 	<div class="card card-body mb-5">
-		<h1>Opening Address</h1>
-		<p class="mt-2">
-			More information is coming soon.
+		<h1 class="text-center">Opening Address: The End of Protest</h1>
+		<h2 class="text-center">Micah White</h2>
+		<img class="img-fluid d-block mx-auto my-2 img-half rounded" src="{{site.baseurl}}/img/speakers/mwhite.jpg" alt="Micah White"/>
+		<p>
+			Is protest broken? Micah White, co-creator of Occupy Wall Street, thinks so. Disruptive tactics have failed to halt the rise of Donald Trump. Movements ranging from Black Lives Matter to environmentalism are leaving activists frustrated. Meanwhile, recent years have witnessed the largest protests in human history. Yet these mass mobilizations no longer change society. Now activism is at a crossroads: innovation or irrelevance. Is it time to consider a paradigm shift in our approach to protest? What does the future of protest look like?
+		</p>
+		<p>
+			Micah White, PhD is a public intellectual and lifelong activist who co-created Occupy Wall Street, a global social movement that spread to 82 countries, while an editor of Adbusters magazine. White's first book, The End of Protest: A New Playbook for Revolution, was published in 2016 by Knopf Canada. He has been a featured guest on major network television shows such as Bill Maher’s Politically Incorrect, the BBC's Newsnight and The National. In recognition of his contributions, Esquire has named him one of the most influential young thinkers alive today. Micah is currently a Fulani Fellow at the All Stars Project in New York City where he is working with Dr. Lenora Fulani, the first woman to run for president of the United States and get on the ballot in all 50 states. He is studying the revolutionary potential of electoral social movements.
 		</p>
 		<div class="pb-5">
 		</div>
