initial port to FA5
needs work

--- a/contact.html
+++ b/contact.html
@@ -15,22 +15,22 @@ permalink: /contact/
         <h2 class="card-title"><a class="contact-color" href="{{site.email}}"><span class="fa fa-fw fa-envelope"></span> wac@ucc.on.ca</a></h2>
       </div>
       <div class="card card-body bg-primary card-inverse card-full">
-        <h2 class="card-title"><a class="contact-color" href="{{site.facebook}}"><span class="fa fa-fw fa-facebook"></span> World Affairs Conference</a></h2>
+        <h2 class="card-title"><a class="contact-color" href="{{site.facebook}}"><span class="fab fa-fw fa-facebook"></span> World Affairs Conference</a></h2>
       </div>
     </div>
     <div class="card-deck mt-2">
       <div class="card card-body card-inverse bg-instagram card-full">
-        <h2 class="card-title"><a class="contact-color" href="{{site.instagram}}"><span class="fa fa-fw fa-instagram"></span> @WorldAffairsCon</a></h2>
+        <h2 class="card-title"><a class="contact-color" href="{{site.instagram}}"><span class="fab fa-fw fa-instagram"></span> @WorldAffairsCon</a></h2>
       </div>
       <div class="card card-body bg-twitter card-inverse card-full">
-        <h2 class="card-title"><a class="contact-color" href="{{site.twitter}}"><span class="fa fa-fw fa-twitter"></span> @WorldAffairsCon</a></h2>
+        <h2 class="card-title"><a class="contact-color" href="{{site.twitter}}"><span class="fab fa-fw fa-twitter"></span> @WorldAffairsCon</a></h2>
       </div>
     </div>
   </div>
   <div class="d-md-none mt-2">
     <button type="button" class="btn btn-danger btn-lg btn-block"><a class="contact-color" href="{{site.email}}"><span class="fa fa-fw fa-envelope"></span> wac@ucc.on.ca</a></button>
-    <button type="button" class="btn btn-primary btn-lg btn-block"><a class="contact-color" href="{{site.facebook}}"><span class="fa fa-fw fa-facebook"></span> WAC</a></button>
-    <button type="button" class="btn btn-inverse bg-instagram btn-lg btn-block"><a class="contact-color" href="{{site.instagram}}"><span class="fa fa-fw fa-instagram"></span> @WorldAffairsCon</a></button>
-    <button type="button" class="btn btn-info btn-lg btn-block"><a class="contact-color" href="{{site.twitter}}"><span class="fa fa-fw fa-twitter"></span> @WorldAffairsCon</a></button>
+    <button type="button" class="btn btn-primary btn-lg btn-block"><a class="contact-color" href="{{site.facebook}}"><span class="fab fa-fw fa-facebook"></span> WAC</a></button>
+    <button type="button" class="btn btn-inverse bg-instagram btn-lg btn-block"><a class="contact-color" href="{{site.instagram}}"><span class="fab fa-fw fa-instagram"></span> @WorldAffairsCon</a></button>
+    <button type="button" class="btn btn-info btn-lg btn-block"><a class="contact-color" href="{{site.twitter}}"><span class="fab fa-fw fa-twitter"></span> @WorldAffairsCon</a></button>
   </div>
 </div>
