--- a/addresses.html
+++ b/addresses.html
@@ -16,9 +16,11 @@ permalink : /addresses/
 		</p>
 		<div class="pb-5">
 		</div>
-		<h1>Closing Address</h1>
-		<p class="mt-2">
-			More information is coming soon.
+		<h1 class="text-center">Closing Address: Saving Civilization with Space Colonization </h1>
+		<h2 class="text-center">Joe Strout</h2>
+		<img class="img-fluid d-block mx-auto my-2 img-half rounded" src="{{site.baseurl}}/img/speakers/jstrout.jpg" alt="Joe Strout"/>
+		<p>
+			Joe Strout’s programming career began at a young age, writing articles for "Nibble" magazine in high school. Joe obtained a bachelors in psychology from the University of Miami and a masters in neuroscience from the University of California, San Diego, but couldn't resist the call of code and became a full-time software developer after graduate school. He now runs a consulting business, crafting unique software solutions to a wide range of problems, and has worked with his two sons to create High Frontier, a space settlement simulation game that uses real physics. Joe is also a long-time member of the National Space Society and a Senior Associate of the Space Studies Institute.
 		</p>
 		{% comment %}
 		<h1 class="text-center">Opening Address: {{ site.data.panel.opening.title}}</h1>
