updates the schedule

--- a/schedule.html
+++ b/schedule.html
@@ -5,66 +5,93 @@ permalink: /schedule/
 ---
 <div class="container">
   <div class="card card-body">
-    <h1 class="text-center">The WAC Schedule</h1>
+    <h1 class="text-center">WAC 2018 Schedule</h1>
     <!--
     <h2 class="text-center">Find a PDF copy <a href="{{site.baseurl}}/files/schedule.pdf">here</a></h2>
     -->
+    <h2 class="text-center">Keynote Address</h2>
     <table class="table table-hover">
-	  <thead class="thead-inverse">
-	    <tr class="bg-primary">
-	      <th>Event</th>
-	      <th>Time</th>
-	      <th>Location</th>
-	    </tr>
-	  </thead>
-	  <tbody>
-	    <tr>
-	      <td>Registration</td>
-	      <td>8:30 to 9:00</td>
-	      <td>Main Foyer</td>
-	    </tr>
-	    <tr>
-	      <td>Opening Address</td>
-	      <td>9:00 to 10:00</td>
-	      <td>Laidlaw Hall</td>
-	    </tr>
-	    <tr>
-	      <td>Break</td>
-	      <td>10:00 to 10:10</td>
-	      <td></td>
-	    </tr>
-	    <tr>
-	      <td>First Session</td>
-	      <td>10:10 to 11:15</td>
-	      <td>Check your nametag for <a href="{{site.baseurl}}/plenaries">plenary</a> details</td>
-	    </tr>
-	    <tr>
-	      <td>Break</td>
-	      <td>11:15 to 11:25</td>
-	      <td></td>
-	    </tr>
-	    <tr>
-	      <td>Second Session</td>
-	      <td>11:25 to 12:30</td>
-	      <td>Check your nametag for <a href="{{site.baseurl}}/plenaries">plenary</a> details</td>
-	    </tr>
-	    <tr>
-	      <td>Lunch</td>
-	      <td>12:30 to 1:15</td>
-	      <td></td>
-	    </tr>
-	    <tr>
-	      <td>Third Session</td>
-	      <td>1:15 to 2:20</td>
-	      <td>Check your nametag for <a href="{{site.baseurl}}/plenaries">plenary</a> details</td>
-	    </tr>
-	    <tr>
-	      <td>Closing Address</td>
-	      <td>2:30 to 3:30</td>
-	      <td>Laidlaw Hall</td>
-	    </tr>
-	  </tbody>
-	</table>
-
+  	  <thead class="thead-inverse">
+  	    <tr class="bg-primary">
+  	      <th>Event</th>
+  	      <th>Time</th>
+  	      <th>Location</th>
+  	    </tr>
+  	  </thead>
+  	  <tbody>
+  	    <tr>
+  	      <td>Doors Open</td>
+  	      <td>6:30 to 7:00</td>
+  	      <td>Main Foyer</td>
+  	    </tr>
+  	    <tr>
+  	      <td>Address</td>
+  	      <td>7:00 to 8:00</td>
+  	      <td>Laidlaw Hall</td>
+  	    </tr>
+  	    <tr>
+  	      <td>Q&A Period</td>
+  	      <td>8:00 to 9:00</td>
+  	      <td>Laidlaw Hall</td>
+  	    </tr>
+  	  </tbody>
+  	</table>
+    <h2 class="text-center">Conference Day</h2>
+    <table class="table table-hover">
+  	  <thead class="thead-inverse">
+  	    <tr class="bg-primary">
+  	      <th>Event</th>
+  	      <th>Time</th>
+  	      <th>Location</th>
+  	    </tr>
+  	  </thead>
+  	  <tbody>
+  	    <tr>
+  	      <td>Registration</td>
+  	      <td>8:30 to 9:00</td>
+  	      <td>Main Foyer</td>
+  	    </tr>
+  	    <tr>
+  	      <td>Opening Address</td>
+  	      <td>9:00 to 10:00</td>
+  	      <td>Laidlaw Hall</td>
+  	    </tr>
+  	    <tr>
+  	      <td>Break</td>
+  	      <td>10:00 to 10:10</td>
+  	      <td></td>
+  	    </tr>
+  	    <tr>
+  	      <td>First Session</td>
+  	      <td>10:10 to 11:15</td>
+  	      <td>Check your nametag for <a href="{{site.baseurl}}/plenaries">plenary</a> details</td>
+  	    </tr>
+  	    <tr>
+  	      <td>Break</td>
+  	      <td>11:15 to 11:25</td>
+  	      <td></td>
+  	    </tr>
+  	    <tr>
+  	      <td>Second Session</td>
+  	      <td>11:25 to 12:30</td>
+  	      <td>Check your nametag for <a href="{{site.baseurl}}/plenaries">plenary</a> details</td>
+  	    </tr>
+  	    <tr>
+  	      <td>Lunch</td>
+  	      <td>12:30 to 1:15</td>
+  	      <td>Lett Gym</td>
+  	    </tr>
+  	    <tr>
+  	      <td>Third Session</td>
+  	      <td>1:15 to 2:20</td>
+  	      <td>Check your nametag for <a href="{{site.baseurl}}/plenaries">plenary</a> details</td>
+  	    </tr>
+  	    <tr>
+  	      <td>Closing Address</td>
+  	      <td>2:30 to 3:30</td>
+  	      <td>Laidlaw Hall</td>
+  	    </tr>
+  	  </tbody>
+  	</table>
   </div>
 </div>
