--- a/staff.html
+++ b/staff.html
@@ -22,6 +22,7 @@ permalink: /staff/
             </div>
           </div>
         </div>
+        <!--{% if {item[1].primary} != "Conference Chair" %}</div>{% endif %}-->
         {% cycle 'group1': '', '</div><div class="row">' %}
       {% endfor %}
     </div>
