adds the schedule!

--- a/schedule.html
+++ b/schedule.html
@@ -6,9 +6,7 @@ permalink: /schedule/
 <div class="container">
   <div class="card card-body">
     <h1 class="text-center">WAC 2018 Schedule</h1>
-    <!--
-    <h2 class="text-center">Find a PDF copy <a href="{{site.baseurl}}/files/schedule.pdf">here</a></h2>
-    -->
+    <p class="text-center">(<a href="{{site.baseurl}}/files/schedule_2018.pdf">PDF copy</a>)</p>
     <h2 class="text-center mt-2">Keynote Address</h2>
     <div class="table-responsive">
       <table class="table table-hover my-4">
