--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@ layout: default
       </div>
     </div>
   </div>
-  <div class="card card-body mt-3">
+<div class="card card-body mt-3">
+    <div class="card card-body">
+        <h3 class="text-center"> World Affairs Conference 2018 (Brave New World)</h3>
+        <iframe src="https://www.youtube.com/embed/gVEUOxwLgjE" height = "580" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <br>
     <div class="row">
       <div class="col-sm-6">
         <img class="img-fluid rounded" src="{{site.baseurl}}/img/speakers/hinton.png" alt="Keynote Speaker Geoffrey Hinton"/>
@@ -56,7 +61,7 @@ layout: default
         </p>
       </div>
     </div>
-  </div>
+</div>
 </div>
 <div class="container mt-3">
   <div class="card card-body">
