--- a/index.html
+++ b/index.html
@@ -41,21 +41,24 @@ layout: default
     </div>
   </div>
   <div class="card card-body mt-3">
-    <div class="row">
-      <div class="col-sm-6">
-        <img class="img-fluid rounded" src="{{site.baseurl}}/img/speakers/hinton.png" alt="Keynote Speaker Geoffrey Hinton"/>
-      </div>
-      <div class="col-sm-6">
-        <h3>Featured Speaker</h3>
-        <h4>Geoffrey Hinton, Keynote Address</h4>
-        <p>
-          The increasing possibilities of artificial intelligence will have consequential impacts on society. Ranging from an upheaval of the job market to an increasingly computer dependent world, artificial intelligence is one of today’s most profound paradigm shifts. Geoffrey Hinton, nicknamed the “Godfather of Machine Learning”, divides his time between working for Google and the University of Toronto. His expertise will address how AI will change the society we live in now.
-        </p>
-        <p>
-          We're releasing more information on other speakers soon - stay tuned!
-        </p>
-      </div>
+    <h3 class="text-center">Promotional Video: Brave New World</h3>
+    <div class="embed-container">
+      <iframe src="https://www.youtube.com/embed/gVEUOxwLgjE" frameborder="0" allowfullscreen></iframe>
     </div>
+  </div>
+  <div class="card card-body mt-3">
+      <div class="row">
+        <div class="col-sm-6">
+          <img class="img-fluid rounded" src="{{site.baseurl}}/img/speakers/hinton.png" alt="Keynote Speaker Geoffrey Hinton"/>
+        </div>
+        <div class="col-sm-6">
+          <h3>Featured Speaker</h3>
+          <h4>Geoffrey Hinton, Keynote Address</h4>
+          <p>
+            The increasing possibilities of artificial intelligence will have consequential impacts on society. Ranging from an upheaval of the job market to an increasingly computer dependent world, artificial intelligence is one of today’s most profound paradigm shifts. Geoffrey Hinton, nicknamed the “Godfather of Machine Learning”, divides his time between working for Google and the University of Toronto. His expertise will address how AI will change the society we live in now.
+          </p>
+        </div>
+      </div>
   </div>
 </div>
 <div class="container mt-3">
