fixes tiny quirk with the staff page
this is a sketchy but working fix

--- a/staff.html
+++ b/staff.html
@@ -24,6 +24,8 @@ permalink: /staff/
         </div>
         {% cycle 'group1': '', '</div><div class="row">' %}
       {% endfor %}
+      <div class="col-sm-6"> <!-- this is just to stop the last person from being full viewport filled -->
+      </div>
     </div>
   </div>
 </div>
