closing up shop for this year!

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
     </div>
     <div class="text-center text-md-right">
       <h4>The Conference is</h4>
-      <h3><span id="countdown">loading...</span></h3>
+      <h3><span id="countdown">Over!</span></h3>
     </div>
   </div>
 </div>
@@ -85,6 +85,7 @@ layout: default
   </div>
 </div>
 <script type="text/javascript">
+/*
   var wacdate = "2/6/2018"; //Countdown date in MM/DD/YYYY format (no 0's required)
   function getTimeRemaining(endtime){
   	var t = Date.parse(endtime) - Date.parse(new Date());
@@ -106,4 +107,5 @@ layout: default
   window.setInterval(function(){
     $("#countdown").html(getTimeRemaining(wacdate));
   }, 1000);
+  */
 </script>
