--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: default
   <div class="card card-body mt-3">
     <div class="row">
       <div class="col-sm-3">
-        <img class="img-fluid" src="{{site.baseurl}}/img/wac_logo.svg" alt="WAC Logo"/>
+        <img class="img-fluid" src="img/wac_logo.svg" alt="WAC Logo"/>
       </div>
       <div class="col-sm-9">
         <h4>What's WAC?</h4>
@@ -49,7 +49,7 @@ layout: default
   <div class="card card-body mt-3">
       <div class="row">
         <div class="col-sm-6">
-          <img class="img-fluid rounded" src="{{site.baseurl}}/img/speakers/hinton.png" alt="Keynote Speaker Geoffrey Hinton"/>
+          <img class="img-fluid rounded" src="img/speakers/hinton.png" alt="Keynote Speaker Geoffrey Hinton"/>
         </div>
         <div class="col-sm-6">
           <h3>Featured Speaker</h3>
@@ -73,7 +73,7 @@ layout: default
     </div>
     <div class="row pt-5">
       <div class="col-sm-3">
-        <img class="img-fluid" src="{{site.baseurl}}/img/snowden.png" alt="Edward Snowden"/>
+        <img class="img-fluid" src="img/snowden.png" alt="Edward Snowden"/>
       </div>
       <div class="col-sm-9">
         <h3>Edward Snowden</h3>
